--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
@@ -23,7 +24,9 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stompjs": "^2.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
